# otterwiki-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
otterwiki_mcp/: api_client.py  config.py  consent.py  formatters.py  oauth_store.py  sections.py  server.py
tests/: conftest.py  test_api_client.py  test_attachments.py  test_config.py  test_consent.py  test_consent_flow.py  test_dynamic_oauth_base_url.py  test_formatters.py  test_oauth_store.py  test_sections.py  test_server_auth.py  test_tools.py  test_wiki_routing.py
