[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otterwiki-mcp"
description = "MCP server for An Otter Wiki"
version = "0.1.0"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
